geodirection: minor structural changes

--- a/notebooks/geodirection.ipynb
+++ b/notebooks/geodirection.ipynb
@@ -77,14 +77,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "5e88b60f-7b9e-4087-9726-dfa39db26c41",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8ab8b1a12c0e4c33acd297058e213f27",
+       "model_id": "37a7ca293aee4efa84c7f1931d1d74cd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -97,6 +97,14 @@
     }
    ],
    "source": [
+    "#\n",
+    "# @todo\n",
+    "# Markdown: Explain that the demonstration first requires some scaffolding; namely\n",
+    "#  two Map markers - one for the remote and one for the base, an input for setting\n",
+    "#  the altitude associated with the remote, and an output for displaying the results\n",
+    "#  of the calculation.\n",
+    "#\n",
+    "\n",
     "from ipyleaflet import Map, Marker, WidgetControl, AwesomeIcon\n",
     "import ipywidgets as widgets\n",
     "\n",
@@ -115,27 +123,25 @@
     "\n",
     "calc_output = widgets.HTML()\n",
     "\n",
-    "DEFAULT_BASE_COORDS   = (51.5048226, -0.113632836)\n",
-    "DEFAULT_REMOTE_COORDS = (51.5041468, -0.118133430)\n",
-    "\n",
-    "base_marker = Marker(location=DEFAULT_BASE_COORDS, icon=AwesomeIcon(\n",
+    "base_marker = Marker(location=(51.5048226, -0.113632836), icon=AwesomeIcon(\n",
     "    name='compass',\n",
     "    marker_color='red',\n",
     "    icon_color='white',\n",
     "), draggable=False)\n",
     "\n",
-    "remote_marker = Marker(location=DEFAULT_REMOTE_COORDS, icon=AwesomeIcon(\n",
+    "remote_marker = Marker(location=(51.5041468, -0.118133430), icon=AwesomeIcon(\n",
     "    name='arrows',\n",
     "    marker_color='green',\n",
     "    icon_color='darkgreen',\n",
     "    spin=True\n",
     "))\n",
     "\n",
-    "m = Map(center=base_marker.location, controls=[], dragging=False, zoom=17)\n",
-    "m.add(base_marker)\n",
-    "m.add(remote_marker)\n",
-    "m.add_control(WidgetControl(widget=altitude_input, position='topright'))\n",
-    "m.add_control(WidgetControl(widget=calc_output, position='bottomright'))\n",
+    "#\n",
+    "# @todo\n",
+    "# Markdown: Explain that we'll simply wrap our 'Location' object, defined previously,\n",
+    "#  in a function which will act as an event handler for any changes to the map - such\n",
+    "#  as altitude input adjustments or map marker drag events.\n",
+    "#\n",
     "\n",
     "def handle_updated_parameters(*args, **kwargs):\n",
     "    def direction_html(dir):\n",
@@ -150,8 +156,19 @@
     "\n",
     "altitude_input.observe(handle_updated_parameters, 'value')\n",
     "remote_marker.observe(handle_updated_parameters, 'location')\n",
-    "handle_updated_parameters()\n",
+    "handle_updated_parameters() # handle current/default parameters (sets the output for first load.)\n",
     "\n",
+    "#\n",
+    "# @todo\n",
+    "# Markdown: And finally, we add these elements to a Map and set them to display. Providing\n",
+    "#  us with a fully interactive map capable of computing the distance, angle of elevation,\n",
+    "#  and bearing associated with two points.\n",
+    "#\n",
+    "m = Map(center=base_marker.location, controls=[], dragging=False, zoom=17)\n",
+    "m.add(base_marker)\n",
+    "m.add(remote_marker)\n",
+    "m.add_control(WidgetControl(widget=altitude_input, position='topright'))\n",
+    "m.add_control(WidgetControl(widget=calc_output, position='bottomright'))\n",
     "display(m)"
    ]
   },
@@ -171,6 +188,25 @@
     }
    ],
    "source": [
+    "\n",
+    "#\n",
+    "# @todo\n",
+    "# Markdown: Explain this is just a quick and simple comparison/assertion function\n",
+    "#  for comparing two 'Direction' objects. It will make the subsequent tests a bit\n",
+    "#  more concise.\n",
+    "#\n",
+    "def compare(expected: Direction, actual: Direction):\n",
+    "  return all([\n",
+    "      getattr(expected, prop) == getattr(actual, prop)\n",
+    "      for prop in [\"bearing\", \"elevation\", \"distance\"]\n",
+    "  ])\n",
+    "\n",
+    "#\n",
+    "# @todo\n",
+    "# Markdown: This is the first set of tests, it's to verify that the 2D/geographic\n",
+    "#  calculations are performed correctly - i.e. that given two sets of coordinates\n",
+    "#  the resulting Direction contains the correct bearing and distance.\n",
+    "#\n",
     "def geographic_tests():\n",
     "  TestCase = namedtuple(\"TestCase\", [\"RemotePoint\", \"ExpectedDirection\"])\n",
     "  current_location = Location(point(51.5069574, -0.112639096, 0), 2)\n",
@@ -193,6 +229,13 @@
     "      return\n",
     "  print(\"all tests passed\")\n",
     "\n",
+    "#\n",
+    "# @todo\n",
+    "# Markdown: \n",
+    "#\n",
+    "#\n",
+    "\n",
+    "\n",
     "def elevation_tests():\n",
     "  TestCase = namedtuple(\"TestCase\", [\"BaseAltitude\", \"RemoteAltitude\", \"ExpectedElevation\"])\n",
     "\n",
@@ -205,15 +248,6 @@
     "      print(f\"[elevation - {idx}] TEST FAILED. expected '{expected}', actual '{actual}'\")\n",
     "      return\n",
     "  print(\"all tests passed\")\n",
-    "\n",
-    "def compare(expected: Direction, actual: Direction):\n",
-    "  \"\"\"\n",
-    "\n",
-    "  \"\"\"\n",
-    "  return all([\n",
-    "      getattr(expected, prop) == getattr(actual, prop)\n",
-    "      for prop in [\"bearing\", \"elevation\", \"distance\"]\n",
-    "  ])\n",
     "\n",
     "geographic_tests()\n",
     "elevation_tests()"
